--- a/packages/search-app/package.json
+++ b/packages/search-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nuxt-monorepo/search-app",
+  "name": "@nuxt-monorepo/app",
   "private": true,
   "type": "module",
   "scripts": {
@@ -8,11 +8,6 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
-  },
-  "dependencies": {
-    "nuxt": "^3.13.0",
-    "vue": "latest",
-    "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt-monorepo/ui": "workspace:^",
